# Support-Agent

./: .env  Demo Video Link.txt  README.md  langgraph.json  pyproject.toml
app/: graph.py  nodes.py  rag.py  types.py
data/: escalation_log.csv
